Issue with overlapping fixed.

--- a/css/utilities.css
+++ b/css/utilities.css
@@ -68,11 +68,11 @@
     display: grid;
     grid-template-columns: 1fr;
     text-align: center;
-    position: absolute;
-    bottom: 0;
     width: 100%;
+    margin-top: 100px;
     border-top: 2px solid #333;
     height: 100px;
+    z-index: 3000;
 }
 
 .footer div
